--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap-social": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal-video": "^1.2.6",
+    "react-player": "^2.9.0",
     "react-popper": "1.3.6",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
